--- a/.doco-cd.yaml
+++ b/.doco-cd.yaml
@@ -10,3 +10,9 @@ external_secrets:
   TRAEFIK_CF_DNS_API_TOKEN: op://Automation/Cloudflare API Token/password
   GARAGE_RPC_SECRET: op://Automation/Garage RPC Secret/password
   GARAGE_ADMIN_TOKEN: op://Automation/Garage Admin Token/password
+
+---
+name: bootstrap
+working_dir: ./bootstrap
+auto_discover: false
+compose_files: ["compose.yaml"]
