--- a/apps/garage/compose.yml
+++ b/apps/garage/compose.yml
@@ -5,6 +5,7 @@ configs:
 
 services:
   garage:
+    container_name: garage
     image: dxflrs/garage:v2.2.0
     configs:
       - source: garage_toml_template
@@ -12,8 +13,9 @@ services:
     environment:
       - GARAGE_RPC_SECRET=${GARAGE_RPC_SECRET}
       - GARAGE_ADMIN_TOKEN=${GARAGE_ADMIN_TOKEN}
-    entrypoint: ["/bin/sh", "-c"]
+    entrypoint: ["/bin/sh"]
     command:
+      - "-c"
       - |
-        envsubst < /etc/garage.toml.tmpl > /etc/garage.toml
+        envsubst < /etc/garage.toml.tmpl > /etc/garage.toml;
         exec garage server
