--- a/apps/garage/compose.yml
+++ b/apps/garage/compose.yml
@@ -13,6 +13,22 @@ services:
     environment:
       - GARAGE_RPC_SECRET=${GARAGE_RPC_SECRET}
       - GARAGE_ADMIN_TOKEN=${GARAGE_ADMIN_TOKEN}
+    expose: ["3900", "3903"]
+    networks: ["traefik_network"]
+    labels:
+      - "traefik.enable=true"
+      # S3 API
+      - "traefik.http.routers.garage-s3.rule=Host(`s3.nas.svc.h.mirceanton.com`) || HostRegexp(`{subdomain:.+}.s3.nas.svc.h.mirceanton.com`)"
+      - "traefik.http.routers.garage-s3.entrypoints=websecure"
+      - "traefik.http.routers.garage-s3.tls.certresolver=cloudflare"
+      - "traefik.http.routers.garage-s3.service=garage-s3"
+      - "traefik.http.services.garage-s3.loadbalancer.server.port=3900"
+      # Admin API
+      - "traefik.http.routers.garage-admin.rule=Host(`garage-admin.nas.svc.h.mirceanton.com`)"
+      - "traefik.http.routers.garage-admin.entrypoints=websecure"
+      - "traefik.http.routers.garage-admin.tls.certresolver=cloudflare"
+      - "traefik.http.routers.garage-admin.service=garage-admin"
+      - "traefik.http.services.garage-admin.loadbalancer.server.port=3903"
 
   webui:
     container_name: garage-webui
@@ -21,9 +37,20 @@ services:
     configs:
       - source: garage_config
         target: /etc/garage.toml
-    ports:
-      - 3909:3909
+    expose: ["3909"]
     environment:
       API_BASE_URL: "http://garage:3903"
       API_ADMIN_KEY: ${GARAGE_ADMIN_TOKEN}
       S3_ENDPOINT_URL: "http://garage:3900"
+    networks: ["traefik_network"]
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.garage-webui.rule=Host(`garage.nas.svc.h.mirceanton.com`)"
+      - "traefik.http.routers.garage-webui.entrypoints=websecure"
+      - "traefik.http.routers.garage-webui.tls.certresolver=cloudflare"
+      - "traefik.http.routers.garage-webui.service=garage-webui"
+      - "traefik.http.services.garage-webui.loadbalancer.server.port=3909"
+
+networks:
+  traefik_network:
+    external: true
