--- a/.doco-cd.yaml
+++ b/.doco-cd.yaml
@@ -10,3 +10,4 @@ external_secrets:
   TRAEFIK_CF_DNS_API_TOKEN: op://Automation/Cloudflare API Token/password
   GARAGE_RPC_SECRET: op://Automation/Garage RPC Secret/password
   GARAGE_ADMIN_TOKEN: op://Automation/Garage Admin Token/password
+  GARAGE_WEBUI_ADMIN_PASS: op://Automation/Garage WebUI/htpasswd
