feat: deploy dozzle

--- a/.doco-cd.yaml
+++ b/.doco-cd.yaml
@@ -11,3 +11,5 @@ external_secrets:
   GARAGE_RPC_SECRET: op://Automation/Garage RPC Secret/password
   GARAGE_ADMIN_TOKEN: op://Automation/Garage Admin Token/password
   GARAGE_WEBUI_ADMIN_PASS: op://Automation/Garage WebUI/htpasswd
+  DOZZLE_ADMIN_USERNAME: op://Automation/Dozzle/username
+  DOZZLE_ADMIN_PASSWORD: op://Automation/Dozzle/htpasswd
