--- a/apps/dozzle/compose.yaml
+++ b/apps/dozzle/compose.yaml
@@ -1,14 +1,26 @@
 ---
+configs:
+  users.yml:
+    content: |
+      users:
+        admin:
+          name: "${DOZZLE_ADMIN_USERNAME}"
+          password: "${DOZZLE_ADMIN_PASSWORD}"
+
 services:
   dozzle:
     container_name: dozzle
     image: amir20/dozzle:v10.0.0
     restart: unless-stopped
     expose: ["8080"]
+    configs:
+      - source: users.yml
+        target: /data/users.yml
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
       - DOZZLE_NO_ANALYTICS=true
+      - DOZZLE_AUTH_PROVIDER=simple
     networks: ["traefik_network"]
     labels:
       - "traefik.enable=true"
