fix(garage): set s3 region?

--- a/apps/garage/garage.toml
+++ b/apps/garage/garage.toml
@@ -23,7 +23,7 @@ rpc_public_addr = "garage:3901"
 
 # ===== S3 API CONFIGURATION =====
 [s3_api]
-s3_region = "garage"
+s3_region = "us-east-1"
 api_bind_addr = "[::]:3900"
 root_domain = ".s3.nas.svc.h.mirceanton.com"
 
