--- a/.taskfiles/lint.yaml
+++ b/.taskfiles/lint.yaml
@@ -1,5 +1,5 @@
 ---
-version: '3'
+version: "3"
 
 tasks:
   default:
@@ -9,30 +9,25 @@ tasks:
       - task: actions
       - task: yaml
       - task: tofu
+      - task: terragrunt
       - task: tofu-validate-all
 
   check:
     desc: Check all files for linting issues without modifying them
     cmds:
-      - task lint:actions
+      - task: actions
       - task lint:yaml -- -lint
       - task lint:tofu -- -check
       - task: tofu-validate-all
+      - task: terragrunt
 
-  actions:
-    desc: Lint GitHub Actions workflow files
-    cmd: actionlint {{.CLI_ARGS}}
-
-  yaml:
-    desc: Format YAML files across the project
-    cmd: yamlfmt {{.CLI_ARGS}} **/*.yaml
-
-  tofu:
-    desc: Lint TOFU files
-    cmd: tofu fmt -recursive {{.CLI_ARGS}}
+  actions: actionlint {{.CLI_ARGS}}
+  yaml: yamlfmt {{.CLI_ARGS}} **/*.yaml
+  tofu: tofu fmt -recursive {{.CLI_ARGS}}
+  terragrunt: terragrunt hcl format
 
   tofu-validate-all:
-    desc: Run tofu init and validate for all subdirs under infrastructure/
+    desc: Run tofu init and validate for all subdirs under terraform/
     cmds:
       - for:
           var: DIRS
@@ -41,7 +36,7 @@ tasks:
           DIR: "{{.ITEM}}"
     vars:
       DIRS:
-        sh: find ./infrastructure -mindepth 1 -maxdepth 1 -type d
+        sh: find ./terraform -mindepth 1 -maxdepth 1 -type d
 
   tofu-validate-one:
     internal: true
