--- a/apps/registry/compose.yaml
+++ b/apps/registry/compose.yaml
@@ -8,7 +8,7 @@ services:
     expose: ["8081"]
 
     volumes:
-      - /mnt/tank/Apps/Nexus:/nexus-data
+      - /mnt/scratch/Nexus_Data:/nexus-data
 
     environment:
       - INSTALL4J_ADD_VM_PARAMS=-Xms2g -Xmx2g -XX:MaxDirectMemorySize=2g
