--- a/.github/workflows/terragrunt-cd.yaml
+++ b/.github/workflows/terragrunt-cd.yaml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Setup mise
         uses: jdx/mise-action@6d1e696aa24c1aa1bcc1adea0212707c71ab78a8 # v3.6.1
+        with: { cache: false }
 
       - name: Load Secrets
         uses: ./.github/actions/load-secrets
