ci: use op connect server for loading secrets

--- a/.github/workflows/terragrunt-ci.yaml
+++ b/.github/workflows/terragrunt-ci.yaml
@@ -30,7 +30,8 @@ jobs:
       - name: Load Secrets
         uses: ./.github/actions/load-secrets
         with:
-          op-service-account-token: ${{ secrets.op-service-account-token }}
+          op-connect-host: ${{ secrets.OP_CONNECT_HOST }}
+          op-connect-token: ${{ secrets.OP_CONNECT_TOKEN }}
 
       - name: Terragrunt Init
         run: terragrunt run --all -- init -upgrade
