--- a/.github/actions/load-secrets/action.yml
+++ b/.github/actions/load-secrets/action.yml
@@ -3,19 +3,26 @@ name: Load Secrets from 1Password
 description: Load secrets from 1Password and export them as environment variables
 
 inputs:
-  op-service-account-token:
-    description: 1Password Service Account Token
+  op-connect-host:
+    description: 1Password Connect Host
+    required: true
+  op-connect-token:
+    description: 1Password Connect Token
     required: true
 
 runs:
   using: composite
   steps:
-    - name: Load secrets from 1Password
+    - name: Configure 1Password Connect
+      uses: 1password/load-secrets-action/configure@8d0d610af187e78a2772c2d18d627f4c52d3fbfb # v3.1.0
+      with:
+        connect-host: ${{ inputs.op-connect-host }}
+        connect-token: ${{ inputs.op-connect-token }}
+
+    - name: Load secrets
       uses: 1password/load-secrets-action@8d0d610af187e78a2772c2d18d627f4c52d3fbfb # v3.1.0
       with: { export-env: true }
       env:
-        OP_SERVICE_ACCOUNT_TOKEN: ${{ inputs.op-service-account-token }}
-
         AWS_ACCESS_KEY_ID: op://Automation/TrueNAS Apps Garage S3 State/username
         AWS_SECRET_ACCESS_KEY: op://Automation/TrueNAS Apps Garage S3 State/password
 
