fix(tofu): connect to 1pass via connect server in ci

--- a/.github/workflows/terragrunt-cd.yaml
+++ b/.github/workflows/terragrunt-cd.yaml
@@ -19,7 +19,6 @@ concurrency:
 
 env:
   TG_NON_INTERACTIVE: "true"
-  OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
 
 jobs:
   apply:
@@ -41,6 +40,12 @@ jobs:
 
       - name: Terragrunt Init
         run: terragrunt run --all -- init -upgrade
+        env:
+          OP_CONNECT_HOST: ${{ secrets.OP_CONNECT_HOST }}
+          OP_CONNECT_TOKEN: ${{ secrets.OP_CONNECT_TOKEN }}
 
       - name: Terragrunt Apply
         run: terragrunt run --all -- apply -auto-approve
+        env:
+          OP_CONNECT_HOST: ${{ secrets.OP_CONNECT_HOST }}
+          OP_CONNECT_TOKEN: ${{ secrets.OP_CONNECT_TOKEN }}
