--- a/.github/workflows/terragrunt-ci.yaml
+++ b/.github/workflows/terragrunt-ci.yaml
@@ -35,9 +35,15 @@ jobs:
 
       - name: Terragrunt Init
         run: terragrunt run --all -- init -upgrade
+        env:
+          OP_CONNECT_HOST: ${{ secrets.OP_CONNECT_HOST }}
+          OP_CONNECT_TOKEN: ${{ secrets.OP_CONNECT_TOKEN }}
 
       - name: Terragrunt Plan
         id: plan
+        env:
+          OP_CONNECT_HOST: ${{ secrets.OP_CONNECT_HOST }}
+          OP_CONNECT_TOKEN: ${{ secrets.OP_CONNECT_TOKEN }}
         run: |
           terragrunt run --all -- plan --detailed-exitcode -no-color 2>&1 | tee plan_output.txt
 
