ci(terragrunt-ci): pass no color arg to terragrunt

--- a/.github/workflows/terragrunt-ci.yaml
+++ b/.github/workflows/terragrunt-ci.yaml
@@ -45,7 +45,7 @@ jobs:
           OP_CONNECT_HOST: ${{ secrets.OP_CONNECT_HOST }}
           OP_CONNECT_TOKEN: ${{ secrets.OP_CONNECT_TOKEN }}
         run: |
-          terragrunt run --all -- plan --detailed-exitcode -no-color 2>&1 | tee plan_output.txt
+          terragrunt run --all --no-color -- plan --detailed-exitcode 2>&1 | tee plan_output.txt
 
           if [ "${PIPESTATUS[0]}" -eq 2 ]; then
             echo "drift_detected=true" | tee "$GITHUB_OUTPUT"
